@@ -94,28 +94,31 @@ SND_setup
 ===============
 */
 void SND_setup(void) {
-    sndBuffer* p, * q;
-    convar_t* cv;
+    sndBuffer *p, * q;
+    convar_t *cv;
     sint scs;
 
     cv = cvarSystem->Get("com_soundMegs", DEF_COMSOUNDMEGS,
-        CVAR_LATCH | CVAR_ARCHIVE,
-        "Sets the amount of memory (MB) to allocate for loaded sound files");
+                         CVAR_LATCH | CVAR_ARCHIVE,
+                         "Sets the amount of memory (MB) to allocate for loaded sound files");
 
     inUse = cv->integer * 1024 * 1024;
     scs = inUse / sizeof(sndBuffer);
 
-    buffer = static_cast<sndBuffer*>(::malloc(scs * sizeof(sndBuffer)));
+    buffer = static_cast<sndBuffer *>(::malloc(scs * sizeof(sndBuffer)));
     // allocate the stack based hunk allocator
-    sfxScratchBuffer = static_cast<schar16*>(::malloc(SND_CHUNK_SIZE * sizeof(schar16) * 4));
+    sfxScratchBuffer = static_cast<schar16 *>(::malloc(SND_CHUNK_SIZE * sizeof(
+                           schar16) * 4));
     sfxScratchPointer = nullptr;
 
     p = buffer;
     q = p + scs;
-    while (--q > p)
-        *(sndBuffer**)q = q - 1;
 
-    *(sndBuffer**)q = nullptr;
+    while(--q > p) {
+        *(sndBuffer **)q = q - 1;
+    }
+
+    *(sndBuffer **)q = nullptr;
     freelist = p + scs - 1;
 
     common->Printf("Sound memory manager started\n");
